@@ -65,6 +65,7 @@
 
 // Inverse components
 @import 'components/avatarImage/avatarImage';
+@import 'components/colorpicker/colorpicker';
 @import 'components/draggable-droppable/draggable';
 @import 'components/draggable-droppable/droppable';
 @import 'components/hotkeys/hotkeys';
